--- a/home.html
+++ b/home.html
@@ -32,6 +32,9 @@
                 <a class="corFonte" href="cadastro.html">CADASTRAR-SE</a>
             </nav>
         </button>
+        <div class="container">
+            <h4>© Andrey José Castilho</h4>
+        </div>
     </section>
 </body>
 </html>
