--- a/História.html
+++ b/História.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="História.css">
 </head>
-<body>
-    
+
+<body class="fundoIMG1">
+    <header class="cabeçalho">
+        <div class="areaLogo">
+            <div class="imagemLogo"></div>
+            <h1 class="tituloSite">FLAMENGO</h1>
+        </div>
+        <nav class="barra">
+            <a href="cadastro.html">CADASTRAR</a>
+            <a href="login.html">LOGIN</a>
+            <a href="Home.html">HOME</a>
+            <a href="História.html">HISTÓRIA</a>
+            <a href=""></a>
+        </nav>
+    </header>    
 </body>
 </html>
