--- a/cadastro.html
+++ b/cadastro.html
@@ -19,6 +19,7 @@
                 <a href="cadastro.html">CADASTRAR</a>
                 <a href="login.html">LOGIN</a>
                 <a href="Home.html">HOME</a>
+                <a href="História.html">HISTÓRIA</a>
                 <a href=""></a>
             </nav>
         </header>
