--- a/espaçoTorcedor.html
+++ b/espaçoTorcedor.html
@@ -1,124 +1,29 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-[
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="espaçoTorcedor.css">
+</head>
+
+<body class="fundoIMG1">
+    <section>
+        <header class="cabeçalho">
+            <div class="areaLogo">
+                <div class="imagemLogo"></div>
+                <h1 class="tituloSite">FLAMENGO</h1>
+            </div>
+            <nav class="barra">
+                <a href="cadastro.html">CADASTRAR</a>
+                <a href="login.html">LOGIN</a>
+                <a href="Home.html">HOME</a>
+                <a href="História.html">HISTÓRIA</a>
+                <a href=""></a>
+            </nav>
+        </header>
+    </section>
+    
+</body>
+</html>
