--- a/cadastro.html
+++ b/cadastro.html
@@ -51,7 +51,7 @@
                 <br>
                 <div style="align-items: center;">
                     <button class="buttonCor buttonAni">
-                        <h3 class="corFonte">CADASTRAR</h3>
+                        <a href="home.html" class="corFonte">CADASTRAR</a>
                     </button>
                 </div>
             </ol>
