--- a/home.html
+++ b/home.html
@@ -25,12 +25,9 @@
         </header>
     </section>
         <h1>SEJA SÓCIO TORCEDOR</h1>
-        <section>
-            <div class="texto-embaixo">
-            <h3>O Flamengo foi fundado em 1895 no Rio de Janeiro, inicialmente como clube de remo, e começou a jogar futebol em 1911. O clube se tornou uma das maiores potências do Brasil, destacando-se nas décadas de 1980 com uma geração histórica, incluindo o ídolo Zico, conquistando títulos como a Copa Libertadores e o Mundial de Clubes em 1981.
+        <h1 class="centroT">HISTÓTORIA</h1>
+        <h1>O Flamengo foi fundado em 1895 no Rio de Janeiro, inicialmente como clube de remo, e começou a jogar futebol em 1911. O clube se tornou uma das maiores potências do Brasil, destacando-se nas décadas de 1980 com uma geração histórica, incluindo o ídolo Zico, conquistando títulos como a Copa Libertadores e o Mundial de Clubes em 1981.
                 Nas décadas seguintes, o Flamengo passou por altos e baixos, mas voltou a dominar o futebol nacional a partir de 2010, com títulos como o Campeonato Brasileiro e a Copa Libertadores de 2019. Hoje, é um dos clubes mais populares do Brasil, com uma das maiores torcidas do mundo.
-            </h3>
-            </div>
-        </section>
+        </h1>        
 </body>
 </html>
